fix: vertical-align by modifying line-height

--- a/src/components/MyPage/MyPageWriteReviews/MyPageWriteReviewsLayout.module.scss
+++ b/src/components/MyPage/MyPageWriteReviews/MyPageWriteReviewsLayout.module.scss
@@ -107,6 +107,7 @@
           cursor: pointer;
           text-align: center;
           vertical-align: middle;
+          line-height: 26px;
           color: #a5a5a5;
         }
         input:checked + label{
